--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,7 +7,12 @@
       <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
       <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h3>
     </div>
-  <% end %>
+  <% if restaurant.reviews.any? %>
+       <% restaurant.reviews.each do |review| %>
+         <p><%= review.thoughts %> Rating: <%= review.rating %></p>
+       <% end %>
+     <% end %>
+ <% end %>
 <% else %>
   <h1>No restaurants yet</h1>
 <% end %>
