--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -16,5 +16,4 @@
 <% else %>
   <h1>No restaurants yet</h1>
 <% end %>
-
-<a href="/restaurants/new">Add a restaurant</a>
+<%= link_to 'Add a restaurant', new_restaurant_path %>
