--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -5,5 +5,6 @@
 <% else %>
   <li>
   <%= link_to('Sign in', new_user_session_path)  %>
+  <%= link_to('Sign in with Facebook', user_facebook_omniauth_authorize_path) %>
   </li>
 <% end %>
