--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,14 +5,16 @@
       <h3><%= restaurant.description %> </h3>
       <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
       <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
-      <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h3>
-    </div>
-  <% if restaurant.reviews.any? %>
+      <% if current_user!= nil && !current_user.has_reviewed?(restaurant) %>
+        <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h3>
+      <% end %>
+  </div>
+    <% if restaurant.reviews.any? %>
        <% restaurant.reviews.each do |review| %>
          <p><%= review.thoughts %> Rating: <%= review.rating %></p>
        <% end %>
      <% end %>
- <% end %>
+    <% end %>
 <% else %>
   <h1>No restaurants yet</h1>
 <% end %>
