--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,7 +4,9 @@
       <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
       <h3><%= restaurant.description %> </h3>
       <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
-      <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+      <% if current_user != nil && current_user.can_delete?(current_user, restaurant) %>
+        <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+      <% end %>
       <% if current_user!= nil && !current_user.has_reviewed?(restaurant) %>
         <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h3>
       <% end %>
