--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,17 +1,17 @@
 <% if @restaurant.any? %>
   <% @restaurant.each do |restaurant| %>
     <div>
-      <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
-      <h3><%= restaurant.description %> </h3>
-      
+      <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+      <h4><%= restaurant.description %> </h4>
+      <h4>Average rating: <%= restaurant.average_rating.to_i %></h4>
       <% if current_user != nil && current_user.can_edit?(current_user, restaurant) %>
-        <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h3>
+        <h4><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %></h4>
       <% end %>
       <% if current_user != nil && current_user.can_delete?(current_user, restaurant) %>
-        <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+        <h4><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h4>
       <% end %>
       <% if current_user!= nil && !current_user.has_reviewed?(restaurant) %>
-        <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h3>
+        <h4><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %> </h4>
       <% end %>
   </div>
     <% if restaurant.reviews.any? %>
